--- a/README
+++ b/README
@@ -29,6 +29,15 @@ Tobii Pro Glasses 2 Connection
 Connect the glasses through Wifi or Ethernet connection. In case of Ethernet
 connection be sure that it is configured as link-local IPv6.
 
+In case you have multiple network interfaces in your system, please specify 
+the network interface name when you create a TobiiGlassesController object:
+
+    # For Linux systems you should specify the name of the net interface ...
+    tobiiglasses = TobiiGlassesController("eth0") 
+
+    # ... while for Windows systems you should specify the net interface index
+    tobiiglasses = TobiiGlassesController("7")
+
 
 
 Python Examples
