--- a/README
+++ b/README
@@ -15,12 +15,9 @@ https://github.com/ddetommaso/TobiiProGlasses2_PyCtrl
 Package installation
 =======================
 
-
-$ pip install tobiiglassesctrl
-
+$ python -m pip install --upgrade tobiiglassesctrl (Python 2.7.x)
 or
-
-$ python -m pip install --upgrade tobiiglassesctrl
+$ python3 -m pip install --upgrade tobiiglassesctrl (Python 3.5.x)
 
 Tobii Pro Glasses 2 Connection
 =======================
@@ -68,7 +65,7 @@ tobiiglasses = TobiiGlassesController("fe80::76fe:48ff:ff00:hell%7")
 Python Examples
 =======================
 
-The following Python examples are available in the directory 'examples':
+The following Python examples are available:
 
 - connect.py - A Python script to connect with the eye-tracker.
 - calibrate_and_record.py - A Python script for managing calibrations and recordings.
